--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "wcmkts-production"
-version = "0.1.1"
+version = "0.1.2"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -17,7 +17,7 @@ dependencies = [
     "sql>=2022.4.0",
     "sqlalchemy==2.0.25",
     "sqlalchemy-libsql>=0.2.0",
-    "streamlit==1.50.0",
+    "streamlit[charts]==1.50.0",
     "typing>=3.10.0.0",
 ]
 
