--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "wcmkts-production"
-version = "0.1.3"
-description = "Add your description here"
+name = "wcmkts-north"
+version = "0.0.1"
+description = "War time staging market monitor"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -17,7 +17,7 @@ dependencies = [
     "sql>=2022.4.0",
     "sqlalchemy==2.0.25",
     "sqlalchemy-libsql>=0.2.0",
-    "streamlit[charts]==1.50.0",
+    "streamlit>=1.50.0",
     "typing>=3.10.0.0",
 ]
 
